Bug fix to sign up on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,7 +397,7 @@ video {
 #retailers {
     background-color: #e31c1c;
     width: 100%;
-    min-height: 100%;
+    min-height: 95%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -456,6 +456,8 @@ video {
     padding: 8vh 15vh 0 0;
     width: 350px;
 }
+
+ /* Footer */
 
 footer {
     background-color: #fff;
